# BullshitDetector

./: .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
site/: app.js  config.js  index.html
studio_contracts/: README.md  bullshit_detector.py
tests/: test_bullshit_parser.py
