[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bullshit-detector"
version = "0.1.0"
description = "On-chain claim verification by LLM consensus, built on GenLayer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GenLayer Builder" }]
keywords = ["genlayer", "intelligent-contracts", "fact-check", "llm", "blockchain"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/your-handle/bullshit-detector"
Documentation = "https://docs.genlayer.com/"
Builders = "https://portal.genlayer.foundation/"
